--- a/index.html
+++ b/index.html
@@ -674,7 +674,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
     <div class="container">
       <div class="col-md-12 center-block">
         <div class="col-md-3">
-          <iframe src="https://medium.com/@hasithacharaka" style="border:0px #ffffff none;" name="myiFrame" scrolling="yes" frameborder="1" marginheight="0px" marginwidth="0px" height="400px" width="300px" allowfullscreen></iframe>
+          <iframe src="https://medium.com/@hasithacharaka" style="border:0px #ffffff none;" name="myiFrame" scrolling="yes" frameborder="1" marginheight="0px" marginwidth="0px" height="400px" width="300px" sandbox="" allowfullscreen></iframe>
         </div>
         <div class="col-md-1"></div>
         <div class="col-md-3">
