major changes with minify css

--- a/index_uc.html
+++ b/index_uc.html
@@ -1,18 +1,36 @@
-<!doctype html>
-<title>Site Maintenance</title>
-<style>
-  body { text-align: center; padding: 150px; }
-  h1 { font-size: 50px; }
-  body { font: 20px Helvetica, sans-serif; color: #333; }
-  article { display: block; text-align: left; width: 650px; margin: 0 auto; }
-  a { color: #dc8100; text-decoration: none; }
-  a:hover { color: #333; text-decoration: none; }
-</style>
 
-<article>
-    <h1>We&rsquo;ll be back soon!</h1>
-    <div>
-        <p>Sorry for the inconvenience but we&rsquo;re performing some maintenance at the moment. If you need to you can always <a href="mailto:hasithacharaka@gmail.com">contact us</a>, otherwise we&rsquo;ll be back online shortly!</p>
-        <p>&mdash; Lord_Lucifer6x3 &mdash;</p>
-    </div>
-</article>
+<h1 class="text">404 File not Found</h1>
+
+<div class="image">
+    <h1>Hasitha</h1>
+</div>
+
+<!--<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">-->
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
+<script src="http://www.jqueryscript.net/demo/jQuery-Plugin-For-Water-Ripple-Animation-ripples/js/jquery.ripples.js">
+</script>
+<script>
+    $(document).ready(function() {
+        $('.image').ripples('show');
+    });
+</script>
+<style>
+    body {
+        background-color:grey;
+        margin-left:0px;
+        margin-right:0px;
+    }
+
+    .text {
+        text-align:center;
+        font-family: 'Open Sans', sans-serif;
+    }
+
+    .image {
+        width:100%;
+        height:500px;
+        background-image:url(http://images6.fanpop.com/image/photos/33300000/Abstract-Space-space-33308889-1920-1200.jpg);
+        background-position:center;
+    }
+
+</style>
