--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@ Experience in MVC architecture ,php,java script,css, social media APIs,linux,ang
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <!--  FB og tags-->
+  <meta property="og:type" content="business.business" />
   <meta property="og:title" content="Hasitha Charaka">
   <meta property="og:description" content="Hasitha Charaka
 Software Engineer & Web Developer Studied at National Institute of Business Management
