PWA convert website

--- a/index.html
+++ b/index.html
@@ -9,6 +9,20 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <html lang="en">
 <head>
     <title>Hasith Charaka | Home : Portfolio</title>
+    <link rel="manifest" href="manifest.json" />
+    <link name="theme-colour" content="black" />
+    <!-- ios support -->
+    <link rel="apple-touch-icon" href="images/icons/icon-72x72.png" />
+    <link rel="apple-touch-icon" href="images/icons/icon-96x96.png" />
+    <link rel="apple-touch-icon" href="images/icons/icon-128x128.png" />
+    <link rel="apple-touch-icon" href="images/icons/icon-144x144.png" />
+    <link rel="apple-touch-icon" href="images/icons/icon-152x152.png" />
+    <link rel="apple-touch-icon" href="images/icons/icon-192x192.png" />
+    <link rel="apple-touch-icon" href="images/icons/icon-384x384.png" />
+    <link rel="apple-touch-icon" href="images/icons/icon-512x512.png" />
+    <meta name="apple-mobile-web-app-status-bar" content="#db4938" />
+    <meta name="theme-color" content="#91848th " />
+
     <link href="css/bootstrap.min.css" rel='stylesheet' type='text/css' />
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="js/jquery.min.js"></script>
@@ -195,7 +209,6 @@ NSBM">
             </div>
         </div>
     </div>
-
     <!-- about -->
     <div id="about" class="about">
         <div class="col-md-6 about-left">
@@ -630,6 +643,8 @@ NSBM">
     <!-- /container -->
     <a href="#home" id="toTop" style="display: block;"> <span id="toTopHover" style="opacity: 1;"> </span></a>
 </div>
+
+
 <!--start-smooth-scrolling-->
 <script type="text/javascript">
     $(document).ready(function () {
@@ -665,6 +680,7 @@ NSBM">
 <!-- //for bootstrap working -->
 <script src="js/bootstrap.js"></script>
 
+<script src="js/main.js"></script>
 
 </body>
 
