--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
     <title>Hasith Charaka | Home : Portfolio</title>
     <link rel="manifest" href="manifest.json" />
     <link name="theme-colour" content="black" />
+    <meta property="fb:pages" content="581414475883874" />
     <!-- ios support -->
     <link rel="apple-touch-icon" href="images/icons/icon-72x72.png" />
     <link rel="apple-touch-icon" href="images/icons/icon-96x96.png" />
