--- a/index.html
+++ b/index.html
@@ -639,7 +639,10 @@ NSBM">
                 </ul>
             </div>
         </div>
-        <a href="https://info.flagcounter.com/NY05"><img src="https://s05.flagcounter.com/count/NY05/bg_FFFFFF/txt_000000/border_CCCCCC/columns_4/maxflags_12/viewers_0/labels_0/pageviews_0/flags_0/percent_0/" alt="Flag Counter" border="0"></a>
+        <div class="pull-right">
+             <a href="https://info.flagcounter.com/NY05"><img src="https://s05.flagcounter.com/count/NY05/bg_FFFFFF/txt_000000/border_CCCCCC/columns_4/maxflags_12/viewers_0/labels_0/pageviews_0/flags_0/percent_0/" alt="Flag Counter" border="0"></a>
+        </div>
+       
     </div>
     <!-- //footer -->
     <!-- /container -->
