--- a/index.html
+++ b/index.html
@@ -639,7 +639,7 @@ NSBM">
                 </ul>
             </div>
         </div>
-        <div class="pull-right">
+        <div class="pull-right" style="float:right">
              <a href="https://info.flagcounter.com/NY05"><img src="https://s05.flagcounter.com/count/NY05/bg_FFFFFF/txt_000000/border_CCCCCC/columns_4/maxflags_12/viewers_0/labels_0/pageviews_0/flags_0/percent_0/" alt="Flag Counter" border="0"></a>
         </div>
        
